# agmerra2dssat

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  agmerra2dssat.sh  agmerra2psims.sh  config.h  config.h.in  configure  data.json  index.html  package-lock.json  package.json  params.json  psims2dssat.R  setparams.sh
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  agmerra2dssat.c  agmerra2psims.c  params4r.c
