
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.
#
#      <agmerra2dssat prepares the AgMERRA Global Gridded Climate Forcing Dataset
#      for input to parallel gridded crop model simulation, in portable site-based 
#      psims.nc format and DSSAT(*.WTH) format.>
#
#    Copyright (C) <2016>  <Robel Takele>  <takelerobel@gmail.com>
#
#######################################################################################################################t.

SUBDIRS = src
dist_doc_DATA = README
