
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.
#
#      <agmerra2dssat prepares the AgMERRA Global Gridded Climate Forcing Dataset
#      for input to parallel gridded crop model simulation, in portable site-based 
#      psims.nc format and DSSAT(*.WTH) format.>
#
#    Copyright (C) <2016>  <Robel Takele>  <takelerobel@gmail.com>
#
#######################################################################################################################

# Bin programs

bin_PROGRAMS = agmerra2dssat agmerra2psims params4r

agmerra2dssat_SOURCES = agmerra2dssat.c  

agmerra2psims_SOURCES = agmerra2psims.c

params4r_SOURCES = params4r.c



## ---------------- ##
##  scripts.        ##
## ---------------- ##


 bin_SCRIPTS = psims2dssat
 CLEANFILES = $(bin_SCRIPTS)
